--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ cdn:
     js: https://unpkg.com/gitalk/dist/gitalk.min.js  # https://cdn.jsdelivr.net/npm/gitalk@1.5.0/dist/gitalk.min.js
   valine:
     js: https://cdn.jsdelivr.net/npm/valine@1.3.9/dist/Valine.min.js
-  copy: # https://cdn.jsdelivr.net/gh/xtaodada/xtaodada.github.io@0.0.2/copy.js
+  copy: # https://cdn.jsdelivr.net/gh/xtaodada/xtaodada.github.io@0.0.2/copy.js  # 复制站内内容时的版权声明
   jquery:
-    js: https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js  # 特效与站内搜索必需
+    js: //cdn.bootcss.com/jquery/3.2.1/jquery.min.js  # 特效与站内搜索必需
   mathjax:
     js: https://cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML
 
@@ -49,6 +49,8 @@ sources:
       js: js/firework1.js
   style:
     css: css/blog.css
+  jquery:
+    js: lib/jquery-3.6.0.min.js
 
 menu:
   回到首页: 
